--- a/aluraframe/client/index.html
+++ b/aluraframe/client/index.html
@@ -46,6 +46,7 @@
     
     <div id="negociacoesView"></div><!--marcação para indicar para NegociacoesView onde a tabela deveria ser inserida-->
     
+    <script src="js/app/services/ProxyFactory.js"></script>
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
     <script src="js/app/helpers/DateHelper.js"></script>
