--- a/aluraframe/client/index.html
+++ b/aluraframe/client/index.html
@@ -57,6 +57,8 @@
     <script src="js/app/views/MensagemView.js"></script>
     <script src="js/app/helpers/Bind.js"></script>
     <script src="js/app/services/NegociacaoService.js"></script>
+    <script src="js/app/services/HttpService.js"></script>
+
 
     <script>
         let negociacaoController = new NegociacaoController();
