Método post adicionado ao projeto

--- a/aluraframe/client/post.html
+++ b/aluraframe/client/post.html
@@ -30,18 +30,8 @@
 
 </body>
 
-    <script>
-
-        function sendPost(event) {
-
-            event.preventDefault();
-            console.log("Enviando post");
-
-            //aqui você deve ler os dados do formulário
-            //construir o json
-            //enviar o XMLHttpRequest
-        }
-    </script>
+    
+<script src="js/app/services/HttpService.js"></script>
 
 <script>
     function sendPost(event) {
