--- a/aluraframe/client/aprendendo-indexeddb.html
+++ b/aluraframe/client/aprendendo-indexeddb.html
@@ -96,7 +96,19 @@
 
             };
         }
+
+
+        ConnectionFactory
+            .getConnection()
+            .then(connection => {
+                // usa a conexão
+            });
         
+        ConnectionFactory
+            .getConnection()
+            .then(connection => {
+                // a conexão tem que ser a mesma utilizada anteriormente
+            });
     </script>
 </body>
 </html>
